# knock-knock

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LAUNCH.md  README.md  SECURITY.md  docker-compose.yml
.claude/skills/app-store-deploy/: SKILL.md  deploy.sh
.claude/skills/play-store-deploy/: SKILL.md  deploy.sh
.githooks/: pre-commit
.github/workflows/: backend.yml  web.yml
.rudder/: session.json
android/: .gitignore  README.md  RELEASE_READINESS.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  (+1 more)
android/fastlane/: Appfile  Fastfile
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
android/gradle/: libs.versions.toml
android/tools/: play_assets.py
crates/slide-api/: Cargo.toml
crates/slide-api/migrations/: 0001_init.sql  0002_push.sql  0003_link_existing_contacts.sql  0004_contacts_unlinked_phone_index.sql  0005_contacts_owner_unlinked_phone_index.sql  0006_calls_video_enabled.sql
crates/slide-api/src/: auth.rs  config.rs  firebase.rs  hub.rs  livekit.rs  main.rs  otp_store.rs  sfu_client.rs  sms.rs  state.rs  tokens.rs
crates/slide-api/src/push/: apns.rs  fcm.rs  mod.rs  webpush.rs
crates/slide-api/src/routes/: auth.rs  calls.rs  contacts.rs  mod.rs  users.rs  ws.rs
crates/slide-core/: Cargo.toml
crates/slide-core/src/: error.rs  jwt.rs  lib.rs  models.rs  otp.rs  phone.rs  turn.rs
crates/slide-sfu/: Cargo.toml
crates/slide-sfu/src/: config.rs  main.rs  room.rs  signaling.rs
deploy/aws/: Dockerfile.allinone  allinone-health.json  allinone-instance.json  allinone-source.json  awsclock.py  deploy-allinone.sh  deploy-apprunner.sh  entrypoint-allinone.sh  finalize-allinone.py  finalize.py  update-env.sh
deploy/fly/: coturn.fly.toml  slide-api.fly.toml  slide-sfu.fly.toml
docs/: API.md  DEPLOY.md  DESIGN.md  SFU.md  STATUS.md
ios/: FIREBASE_SETUP.md  Generated-Info.plist  README.md  Slide.entitlements  SlideRelease.entitlements  exportOptions.plist  project.yml
ios/Resources/: GoogleService-Info.plist  RINGTONE.md  hangup.caf  knock.caf  pickup.caf  ringtone.caf
ios/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Slide.xcodeproj/: project.pbxproj
ios/Slide.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Slide.xcodeproj/xcshareddata/xcschemes/: Slide.xcscheme
ios/Sources/App/: ActiveCall.swift  AppDelegate.swift  AppState.swift  MainTabView.swift  RootView.swift  SlideApp.swift
ios/Sources/DesignSystem/: Components.swift  Haptics.swift  SoundEffects.swift  Theme.swift
ios/Sources/Features/Calls/: RecentsView.swift
ios/Sources/Features/Contacts/: ContactSheet.swift  ContactsView.swift  DialView.swift  GroupCallPicker.swift  InviteComposer.swift  InviteMessage.swift  PhoneNumberFormatting.swift
ios/Sources/Features/InCall/: AudioRouteButton.swift  CallPiP.swift  InCallView.swift  InCallViewModel.swift  IncomingCallView.swift
ios/Sources/Features/Knock/: IncomingKnockBanner.swift  KnockPad.swift
ios/Sources/Features/Onboarding/: CodeEntryView.swift  CountryCode.swift  NameStepView.swift  OnboardingFlow.swift  PhoneEntryView.swift  WelcomeView.swift
ios/Sources/Features/Profile/: ProfileView.swift
ios/Sources/Models/: Models.swift
ios/Sources/Networking/: APIClient.swift  APIError.swift  Config.swift  Keychain.swift  MockData.swift
ios/Sources/Services/: CallKitManager.swift  CallService.swift  FirebaseAuthService.swift  KnockHaptics.swift  PushService.swift  RealCallService.swift  SignalingClient.swift
ios/fastlane/: Appfile  Fastfile  README.md  SUBMIT.md
ios/fastlane/metadata/en-US/: copyright.txt  description.txt  keywords.txt  name.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
ios/fastlane/metadata/review_information/: email_address.txt  first_name.txt  notes.txt  phone_number.txt
ios/tools/: capture_screenshots.sh  make_appicon.py  make_ringtone.py  screenshot_scenes.py
scripts/: deploy-backend.sh  install-hooks.sh  sfu-handshake.mjs  smoke.sh
store/: README.md  app-store-connect.md  assets.md  listing.md  play-console.md  privacy.md  submission-checklist.md
web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web/public/: sw.js
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/privacy/: page.tsx
web/src/app/terms/: page.tsx
web/src/app/web/: page.tsx
web/src/components/: Footer.tsx  Knock.tsx  Legal.tsx  Nav.tsx  PhoneField.tsx  PhoneMockup.tsx  Reveal.tsx  SlideWebApp.tsx  StoreBadges.tsx  countries.ts  icons.tsx
web/src/lib/: firebase.ts  push.ts
(+53 files in other folders)
