[package]
name = "slide-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "slide-api"
path = "src/main.rs"

[dependencies]
slide-core.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

sqlx.workspace = true
redis.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

# Web Push (browser notifications): VAPID + RFC 8291 ECE encryption.
web-push = "0.10"

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
futures.workspace = true
reqwest.workspace = true
aws-config.workspace = true
aws-sdk-sns.workspace = true
