[package]
name = "slide-sfu"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "slide-sfu"
path = "src/main.rs"

[dependencies]
slide-core.workspace = true

tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower-http.workspace = true
http.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

# WebRTC media engine (SFU).
webrtc = "0.17"
tokio-tungstenite = "0.24"
bytes = "1"
